--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -174,6 +174,7 @@ $( document ).ready(function() {
     setAllInfo();
     document.getElementById('btnActualizar').disabled = true;
     sendInfo(); 
+    alert(document.cookie);
   });
 //Procesa la informacion del json de la BD para poder ser leidos por la funcion de tablas
 function getLocations(){
@@ -410,6 +411,8 @@ function sendInfo(){
         success: function (response) {
           swal({title: "Locacion actualizada", text: "La locacion con el nombre: "+$('#NameLocation').val()+" se actualizo exitosamente", icon: 
               "success"}).then(function(){ 
+                var selectTable = document.getElementsByName("LocationsTable_length");
+                document.cookie = selectTable[0].value;
                 location.reload();
                 }
               );
