--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -180,8 +180,8 @@ $( document ).ready(function() {
 
 
     $(selectTable[0]).change(function(){
-      document.cookie = $(this).val();
-      document.cookie = $(inputTable[0]).val();
+      document.cookie = 'select='+$(this).val();
+      document.cookie = 'input='+$(inputTable[0]).val();
       alert(document.cookie);
     });
 
