--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -183,8 +183,10 @@ $( document ).ready(function() {
       document.cookie = 'select='+$(this).val();
       document.cookie = 'input='+$(inputTable[0]).val();
       var select = document.cookie.replace(/(?:(?:^|.*;\s*)select\s*\=\s*([^;]*).*$)|^.*$/, "$1");
-      alert(document.cookie);
+      var input = document.cookie.replace(/(?:(?:^|.*;\s*)input\s*\=\s*([^;]*).*$)|^.*$/, "$1");
+
       alert(select);
+      alert(input);
     });
 
 
