--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -175,8 +175,7 @@ $( document ).ready(function() {
     document.getElementById('btnActualizar').disabled = true;
     sendInfo(); 
     var selectTable = document.getElementsByName("LocationsTable_length");
-    var inputTable  = document.getElementsByClassName("ui input");
-        inputTable  = inputTable[0].children;
+    var inputTable  = document.querySelector("input");
     var select = document.cookie.replace(/(?:(?:^|.*;\s*)select\s*\=\s*([^;]*).*$)|^.*$/, "$1");
     var input = document.cookie.replace(/(?:(?:^|.*;\s*)input\s*\=\s*([^;]*).*$)|^.*$/, "$1");
 
@@ -185,7 +184,7 @@ $( document ).ready(function() {
     $(selectTable[0]).val(select);
     $(inputTable[0]).val(input);
 
-    inputTable[0].click();
+    
 
 
     $(selectTable[0]).change(function(){
@@ -193,11 +192,12 @@ $( document ).ready(function() {
 
     });
 
-    if($(inputTable[0]).val() != ""){
-      document.cookie = 'input='+$(inputTable[0]).val();
-    }
+    inputTable.addEventListener('change', updateValue)
 
-    console.log(document.cookie);
+    function updateValue(e) {
+      alert('asd');
+    }
+    
   });
 
 
