--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -179,7 +179,7 @@ $( document ).ready(function() {
     var select = document.cookie.replace(/(?:(?:^|.*;\s*)select\s*\=\s*([^;]*).*$)|^.*$/, "$1");
     var input = document.cookie.replace(/(?:(?:^|.*;\s*)input\s*\=\s*([^;]*).*$)|^.*$/, "$1");
     
-    var selece = 0;
+    select = 90;
     $(selectTable[0]).val(select);
     $(inputTable).val(input);
 
