--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -185,10 +185,9 @@ $( document ).ready(function() {
     var table = $('#LocationsTable').DataTable();
         table.search(inputTable.value).draw();
 
-
-
     $(selectTable[0]).change(function(){
       document.cookie = 'select='+$(this).val();
+      alert(document.cookie);
     });
 
     $(inputTable).change(function() {
