--- a/Views/Layouts/Contents/Templates/exepciones.html
+++ b/Views/Layouts/Contents/Templates/exepciones.html
@@ -46,9 +46,12 @@
         <form id="form" method="POST">
             Excepción de dispositivos DHCP: <br/>
             <textarea name="data" id="data" cols="84" rows="7"></textarea>
-            <button id="save">Guardar</button>
-            <button id="restart">Reiniciar servicio DHCP</button>
         </form>
+    </div>
+
+    <div id="buttons">
+        <button id="save">Guardar</button>
+        <button id="restart">Reiniciar servicio DHCP</button>
     </div>
    
  </body>
