--- a/Views/Layouts/Contents/Templates/exepciones.html
+++ b/Views/Layouts/Contents/Templates/exepciones.html
@@ -9,10 +9,19 @@
 </head>
 <style>
 #data{
-    min-width: 100%;
+    min-width: 45%;
     max-height: 450px;
     height: 450px;
-    width: 100%;
+    width: 47%;
+    resize: none;
+    background-color: black;
+    color: #21fd34;
+}
+#dataLog{
+    min-width: 45%;
+    max-height: 450px;
+    height: 450px;
+    width: 47%;
     resize: none;
     background-color: black;
     color: #21fd34;
@@ -46,6 +55,7 @@
         <form id="form" method="POST">
             Excepción de dispositivos DHCP: <br/>
             <textarea name="data" id="data" cols="84" rows="7"></textarea>
+            <textarea name="dataLog" id="dataLog" cols="84" rows="7"></textarea>
         </form>
     </div>
 
