--- a/Views/Layouts/Contents/Templates/exepciones.html
+++ b/Views/Layouts/Contents/Templates/exepciones.html
@@ -55,7 +55,7 @@
         <form id="form" method="POST">
             Excepción de dispositivos DHCP: <br/>
             <textarea name="data" id="data" cols="84" rows="7"></textarea>
-            <textarea name="dataLog" id="dataLog" cols="84" rows="7"></textarea>
+            <textarea name="dataLog" id="dataLog" cols="84" rows="7" disabled></textarea>
         </form>
     </div>
 
