--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -93,6 +93,7 @@
                       </div>
                     <button class="btn btn-primary btn-round" id="btnActualizar">Actualizar</button>
                     <button class="btn btn-primary btn-round" id="btnRegistrar">Registrar</button>
+                    <button class="btn btn-primary btn-round" id="btnRegistrar">Dispositivos</button>
                     </div>
                   </div>
                 </div>
