--- a/Views/Layouts/Contents/Styles/MultimediaFromFolder.css
+++ b/Views/Layouts/Contents/Styles/MultimediaFromFolder.css
@@ -12,9 +12,27 @@ and open the template in the editor.
     height: 100%;
     width: 100%;
 }
-
 #video1 {
     position: fixed; 
     bottom: 0; 
     right: 0;
+}
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    position: absolute;
+    top:50%;
+    left: 50%; 
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+    margin-top: -100px;
+    margin-left: -100px;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
