--- a/Views/Styles/Themes/TvModern/Blue.css
+++ b/Views/Styles/Themes/TvModern/Blue.css
@@ -59,7 +59,8 @@ div#EpgDescription {
 /********** BACKGROUNDS ***********/
 
 div.BackgroundInfo {
-    background-image: url('Blue/info.png');
+    /*background-image: url('Blue/info.png');*/
+    background-image: linear-gradient(135deg, #45606b 0, #497789 25%, #27657b 50%, #00536e 75%, #004462 100%);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -139,7 +140,7 @@ div#EpgRating,
 div.Rating,
 div#Temperatures,
 div#TemperatureGroup {
-    color: #EEB462;
+    color: #ffffff;
 }
 
 .Program
