--- a/Views/Layouts/Menu/Styles/Minimalist.css
+++ b/Views/Layouts/Menu/Styles/Minimalist.css
@@ -1,3 +1,9 @@
+
+@font-face {
+  font-family: tahu;
+  src: url(../../../Styles/Fonts/Tahu!.ttf);
+}
+
 html{
   width: 100vw;
   height: 100vh;
@@ -13,15 +19,21 @@ img#back {
   height: 100%;
   width: 100%;
 }
-img#ico2 {
+h1#ico2 {
+  color: #fff;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -10%;
-  margin-left: -8%;
+  font-family: 'tahu';
+  margin: 0%;
+  width: 100%;
   height: 20%;
-  width: 16%;
-
+  text-align: center;
+  vertical-align: middle;
+  top: 50%;
+  margin-top: -10%;
+  left: 0%;
+  bottom: auto;
+  right: auto;
+  font-size: 100px;
 }
 #MainLogo {
   max-height: 10%;
