--- a/Views/Layouts/Menu/Styles/Grid.css
+++ b/Views/Layouts/Menu/Styles/Grid.css
@@ -96,66 +96,16 @@ div#TemperatureGroup {
     width: 59%;
 }
 
-div#MenuSelected {
-    font-family: gotham;
-    font-size: 120px;
-    width: 100%;
-    text-align: center;
-    top:40%;
-    position: fixed;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: #2196F3;
+    padding: 10px;
 }
-
-div#MenuDescription {
-    font-size: 50px;
-    width: 100%;
-    text-align: center;
-    top: 55%;
-    position: fixed;
-    font-family: darker;
-}
-
-#MenuChevronLeft,
-#MenuChevronRight {
-    bottom: 10%;
-    position: fixed;
-    font-size: 50px;
-}
-
-#MenuChevronLeft {
-    left: 5%;
-}
-
-#MenuChevronRight {
-    right: 5%;
-}
-
-div#MenuBar {
-    width: 80%;
-    background: rgba(255, 255, 255, 0.4);
-    position: fixed;
-    bottom: 11%;
-    height: 7%;
-    right: 10%;
-    border-radius: 24px;
-
-}
-
-div.MenuList {
-    float: left;
-    width: 27.5%;
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
     font-size: 30px;
     text-align: center;
-    font-family: gotham;
-    padding-top: 1.2%;
-}
-
-div.MenuFocus {
-    /*background: rgba(255,255,2550,0.3);*/
-    border-top: 3px solid #fff;
-    font-size: 50px;
-    height: 100%;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-    width: 45%;
-    padding-top: 0%;
 }
