--- a/Views/Layouts/Menu/Styles/Fullscreen.css
+++ b/Views/Layouts/Menu/Styles/Fullscreen.css
@@ -29,7 +29,7 @@ div#MenuContainer {
     font-size: 36px;
 }
 
-.BackgroundsMenu {
+div#BackgroundsMenu {
     position: fixed;
     width: 100%;
     height: 100%;
