--- a/Views/Layouts/Menu/Styles/Fullscreen.css
+++ b/Views/Layouts/Menu/Styles/Fullscreen.css
@@ -14,7 +14,7 @@ and open the template in the editor.
     max-height: 20%;
     left: 5%;
     position: fixed;
-    top: 5%;
+    bottom: 5%;
 }
 
 div#MenuContainer {
@@ -33,39 +33,35 @@ div#MenuBackgrounds {
     position: fixed;
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
+    background-size: 100% 100%;
 }
 
 div#MenuDate {
-    width: 25%;
+    width: 30%;
     height: 9%;
-    font-size: 60px;
-    text-align: right;
+    font-size: 50px;
+    text-align: left;
     top: 5%;
     position: fixed;
-    right: 20%;
-    border-right: 1px solid;
-    padding-right: 1%;
-    margin-right: 1%;
-    text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+    left: 5%;
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 }
 
 div#MenuHour {
-    width: 15%;
+    width: 20%;
     height: 5%;
     font-size: 60px;
-    top: 5%;
+    top: 10%;
     position: fixed;
-    right: 5%;
+    left: 5%;
     text-align: left;
-    text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 }
 
 div#MenuWeather,
 div#MenuHour,
 div#MenuDate {
-    font-family: ostrich;
+    font-family: 'Lexend Deca', sans-serif;
 }
 
 #WeatherIcon {
@@ -97,7 +93,7 @@ div#TemperatureGroup {
 }
 
 div#MenuSelected {
-    font-family: gotham;
+    font-family: 'Lexend Deca', sans-serif;
     font-size: 120px;
     width: 100%;
     text-align: center;
