--- a/Views/Layouts/Menu/Styles/Fullscreen.css
+++ b/Views/Layouts/Menu/Styles/Fullscreen.css
@@ -29,11 +29,10 @@ div#MenuContainer {
     font-size: 36px;
 }
 
-div#MenuBackgrounds {
+#MenuBackgrounds {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-size: 100% 100%;
 }
 
 div#MenuDate {
