--- a/Views/Layouts/Menu/Styles/Fullscreen.css
+++ b/Views/Layouts/Menu/Styles/Fullscreen.css
@@ -93,9 +93,15 @@ div#TemperatureGroup {
 
 
 div#MenuGrid {
-
+    position: fixed;
+    width: 30%;
+    height: 40%;
+    right: 5%;
+    top: 15%;
+    text-align: left;
 }
 
 #MenuGrid img {
-    
+    margin: 2%;
+    background: rgba(0, 0, 0, 0.65);
 }
