--- a/Views/Layouts/Menu/Styles/Fullscreen.css
+++ b/Views/Layouts/Menu/Styles/Fullscreen.css
@@ -94,11 +94,11 @@ div#TemperatureGroup {
 
 div#MenuGrid {
     position: fixed;
-    width: 30%;
-    height: 40%;
-    right: 5%;
-    top: 15%;
-    text-align: left;
+    width: 50%;
+    height: 50%;
+    right: 3%;
+    top: 20%;
+    text-align: right;
 }
 
 #MenuGrid img {
