--- a/Views/Layouts/Menu/Styles/Drift.css
+++ b/Views/Layouts/Menu/Styles/Drift.css
@@ -1,3 +1,7 @@
+
+body{
+    background: #fff;
+}
 ul.horizontal{
     margin:0;
     padding:0;
@@ -19,14 +23,14 @@ div#MenuContainer {
     font-size: 36px;
 }
 .MenuNodes {
-    width: 25%;
+    width: 37%;
     font-size: 35px;
     padding: 1%;
     float: unset;
     text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 }
 .MenuList{
-    margin-top: 15%;
+    margin-top: 25%;
 }
 
 div#MenuWeather,
@@ -40,8 +44,8 @@ div#MenuDateHeader, .MenuNodes{
 
 div#MenuWeather {
     width: 30%;
-    font-size: 30px;
-    top: 12%;
+    font-size: 85%;
+    top: 30%;
     position: fixed;
     right: 0%;
     text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
@@ -51,8 +55,8 @@ div#MenuWeather {
 }
 div#MenuDateHeader {
     width: 14%;
-    font-size: 30px;
-    top: 12%;
+    font-size: 85%;
+    top: 30%;
     position: fixed;
     right: 0%;
     text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
@@ -62,13 +66,13 @@ div#MenuDateHeader {
 }
 div#MenuTitle {
     width: 25%;
-    font-size: 65px;
+    font-size: 170%;
     position: fixed;
     right: 0%;
     text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
     padding: 1%;
     margin-right: 5%;
-    top: 1%;
+    top: 20%;
     font-family: Dominator-Medium;
 }
 #MenuBackgrounds {
@@ -76,12 +80,12 @@ div#MenuTitle {
     width: 100%;
     height: 100%;
     left: 0;
-    /* background: url('../img/DRIFT.jpg') no-repeat center center fixed; */
-    background: linear-gradient(
+    /* background: linear-gradient(
         rgb(255 255 255 / 65%), 
         rgb(55 53 53 / 30%)
       ),
-   url(../../../../../Media/Menu/DRIFT/DRIFT.jpg);
+   url(../../../../../Media/Menu/DRIFT/DRIFT.jpg); */
+   background-image:url(../../../../../Media/Menu/DRIFT/DRIFT.jpg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -118,7 +122,7 @@ div#BackgroundContainer {
     background-repeat: no-repeat;
     text-align: center;
     font-size: 36px;
-}
+} 
 @font-face {
     font-family: 'Curantyle-Bold-Bold';
     src:url('Custom-Fonts/Curantyle-Bold-Bold/Curantyle-Bold-Bold.ttf.woff') format('woff'),
