--- a/Views/Layouts/Menu/Styles/Drift.css
+++ b/Views/Layouts/Menu/Styles/Drift.css
@@ -21,6 +21,7 @@ div#MenuContainer {
     background-repeat: no-repeat;
     text-align: center;
     font-size: 36px;
+    z-index: 2;
 }
 .MenuNodes {
     width: 37%;
@@ -31,6 +32,8 @@ div#MenuContainer {
 }
 .MenuList{
     margin-top: 25%;
+    text-align: justify;
+    margin-left: 7%;
 }
 
 div#MenuWeather,
@@ -48,7 +51,7 @@ div#MenuWeather {
     top: 30%;
     position: fixed;
     right: 0%;
-    text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+    text-shadow: 4px 4px 10px rgba(233, 232, 232, 0.5);
     padding: 1%;
     margin-right: 10%;
     margin-top: 0%;
@@ -59,20 +62,20 @@ div#MenuDateHeader {
     top: 30%;
     position: fixed;
     right: 0%;
-    text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+    text-shadow: 4px 4px 10px rgba(233, 232, 232, 0.5);
     padding: 1%;
     margin-top: 0%;
     margin-right: 2%;
 }
 div#MenuTitle {
     width: 25%;
-    font-size: 170%;
+    font-size: 150%;
     position: fixed;
     right: 0%;
-    text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+    text-shadow: 4px 4px 10px rgba(233, 232, 232, 0.5);
     padding: 1%;
     margin-right: 5%;
-    top: 20%;
+    top: 10%;
     font-family: Dominator-Medium;
 }
 #MenuBackgrounds {
@@ -101,12 +104,13 @@ div#MenuTitle {
         rgb(55 53 53 / 30%)
       ),
    url(../../../../../Media/Menu/DRIFT/DRIFT.jpg); */
-   background-image: linear-gradient(red, yellow);
+   background-image: linear-gradient(rgb(16, 29, 20), rgb(255, 255, 255));
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    z
+    z-index: 1;
+    opacity: 0.6;
 } 
 
 
@@ -126,7 +130,7 @@ div#TemperatureGroup {
 div#MenuHour {
     width: 100%;
     font-size: 30px;
-    text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+    text-shadow: 4px 4px 10px rgba(233, 232, 232, 0.5);
 }
 
 div#BackgroundContainer {
