--- a/Views/Layouts/Menu/Styles/Drift.css
+++ b/Views/Layouts/Menu/Styles/Drift.css
@@ -31,7 +31,7 @@ div#MenuContainer {
     text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 }
 .MenuNodes.focus{
-    text-decoration: underline;
+    border-color: black;
 }
 .MenuList{
     margin-top: 25%;
