--- a/Views/Layouts/Contents/Styles/MultimediaFromFolder.css
+++ b/Views/Layouts/Contents/Styles/MultimediaFromFolder.css
@@ -36,3 +36,52 @@ and open the template in the editor.
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+div#MenuWeather {
+    width: 30%;
+    font-size: 85%;
+    top: 30%;
+    position: fixed;
+    right: 0%;
+    text-shadow: 4px 4px 10px rgba(233, 232, 232, 0.5);
+    padding: 1%;
+    margin-right: 10%;
+    margin-top: 0%;
+}
+div#MenuDateHeader {
+    width: 14%;
+    font-size: 85%;
+    top: 30%;
+    position: fixed;
+    right: 0%;
+    text-shadow: 4px 4px 10px rgba(233, 232, 232, 0.5);
+    padding: 1%;
+    margin-top: 0%;
+    margin-right: 2%;
+}
+
+div#TemperatureGroup {
+    float: left;
+    width: 75%;
+}
+
+div#MenuHour {
+    width: 100%;
+    font-size: 30px;
+    text-shadow: 4px 4px 10px rgba(233, 232, 232, 0.5);
+}
+
+div#MenuWeather,
+div#MenuHour,
+div#MenuDateHeader, .MenuNodes{
+    font-family: Street-Bold-Compressed;
+}
+
+
+div#WeatherSummary {
+    float: right;
+    width: 40%;
+    text-align: left;
+    white-space: nowrap;
+    display: none;
+}
