--- a/Views/Layouts/Contents/Styles/MultimediaFromFolder.css
+++ b/Views/Layouts/Contents/Styles/MultimediaFromFolder.css
@@ -85,3 +85,15 @@ div#WeatherSummary {
     white-space: nowrap;
     display: none;
 }
+div#MenuContainer {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    color: rgb(0, 0, 0);
+    background-position: center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    text-align: center;
+    font-size: 36px;
+    z-index: 2;
+}
