--- a/Views/Layouts/Menu/Styles/Drift.css
+++ b/Views/Layouts/Menu/Styles/Drift.css
@@ -92,7 +92,7 @@ div#MenuTitle {
         rgb(55 53 53 / 30%)
       ),
    url(../../../../../Media/Menu/DRIFT/DRIFT.jpg); */
-   background-image:url(../../../../../Media/Menu/DRIFT/DRIFT.jpg);
+   background-image:url(../../../../../Media/Menu/DRIFT/DRIFT.png);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
