--- a/Views/Layouts/Menu/Styles/Drift.css
+++ b/Views/Layouts/Menu/Styles/Drift.css
@@ -81,6 +81,7 @@ div#MenuTitle {
     margin-right: 5%;
     top: 10%;
     font-family: Dominator-Medium;
+    display: none;
 }
 #MenuBackgrounds {
     position: fixed;
