--- a/Views/Layouts/Menu/Styles/Drift.css
+++ b/Views/Layouts/Menu/Styles/Drift.css
@@ -31,7 +31,8 @@ div#MenuContainer {
     text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 }
 .MenuNodes.focus{
-    border-bottom: 10px solid rgb(0, 0, 0);
+    border-bottom: 7px solid rgb(0, 0, 0);
+    border-style: groove;
 }
 .MenuList{
     margin-top: 25%;
