--- a/Views/Layouts/Menu/Styles/Drift.css
+++ b/Views/Layouts/Menu/Styles/Drift.css
@@ -32,7 +32,10 @@ div#MenuContainer {
 }
 .MenuNodes.focus{
     border-bottom: 7px solid rgb(0, 0, 0);
-    border-style: groove;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    box-shadow: 5px 10px #f1efef
+
 }
 .MenuList{
     margin-top: 25%;
