--- a/Views/Layouts/Menu/Styles/Drift.css
+++ b/Views/Layouts/Menu/Styles/Drift.css
@@ -34,7 +34,7 @@ div#MenuContainer {
     border-bottom: 7px solid rgb(0, 0, 0);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    box-shadow: 5px 10px #f1efef
+    box-shadow:0px 1px 1px #f5f3f5;
 
 }
 .MenuList{
