--- a/Views/Layouts/Menu/Styles/Drift.css
+++ b/Views/Layouts/Menu/Styles/Drift.css
@@ -34,7 +34,7 @@ div#MenuContainer {
     border-bottom: 7px solid rgb(0, 0, 0);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    box-shadow:0px 0px 1px #f5f3f5;
+    box-shadow: 0 4px 6px -6px rgba(255, 255, 255, 0.795);;
 
 }
 .MenuList{
